// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decode bit-depth-04 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  4,
  0,
  0,
  0,
  4,
  4,
  3,
  0,
  0,
  0,
  91,
  223,
  131,
  77,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  48,
  80,
  76,
  84,
  69,
  255,
  255,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  0,
  0,
  0,
  255,
  0,
  255,
  255,
  255,
  0,
  255,
  255,
  255,
  0,
  154,
  0,
  255,
  255,
  0,
  126,
  43,
  0,
  255,
  0,
  129,
  250,
  0,
  181,
  255,
  0,
  255,
  184,
  219,
  255,
  0,
  255,
  219,
  0,
  69,
  253,
  226,
  35,
  0,
  0,
  0,
  14,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  100,
  84,
  98,
  113,
  129,
  34,
  0,
  7,
  83,
  1,
  99,
  159,
  16,
  61,
  80,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`decode bit-depth-08 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  8,
  0,
  0,
  0,
  8,
  8,
  3,
  0,
  0,
  0,
  243,
  209,
  78,
  185,
  0,
  0,
  0,
  1,
  115,
  82,
  71,
  66,
  1,
  217,
  201,
  44,
  127,
  0,
  0,
  0,
  9,
  112,
  72,
  89,
  115,
  0,
  0,
  11,
  19,
  0,
  0,
  11,
  19,
  1,
  0,
  154,
  156,
  24,
  0,
  0,
  0,
  192,
  80,
  76,
  84,
  69,
  255,
  255,
  255,
  191,
  191,
  191,
  64,
  64,
  64,
  64,
  0,
  0,
  191,
  0,
  0,
  191,
  64,
  0,
  64,
  191,
  0,
  0,
  255,
  0,
  191,
  191,
  255,
  143,
  159,
  207,
  48,
  96,
  112,
  64,
  48,
  64,
  191,
  16,
  64,
  207,
  64,
  48,
  112,
  191,
  16,
  64,
  255,
  0,
  64,
  64,
  255,
  48,
  96,
  239,
  16,
  159,
  207,
  64,
  143,
  191,
  191,
  48,
  191,
  239,
  64,
  143,
  207,
  191,
  48,
  191,
  255,
  0,
  39,
  0,
  255,
  45,
  48,
  247,
  57,
  143,
  231,
  98,
  143,
  231,
  167,
  48,
  247,
  199,
  56,
  207,
  194,
  168,
  111,
  191,
  223,
  63,
  116,
  0,
  255,
  134,
  16,
  231,
  172,
  48,
  182,
  167,
  48,
  182,
  120,
  16,
  231,
  88,
  40,
  238,
  72,
  120,
  204,
  64,
  160,
  188,
  115,
  45,
  255,
  134,
  50,
  226,
  172,
  59,
  169,
  165,
  64,
  153,
  113,
  64,
  179,
  81,
  86,
  190,
  70,
  130,
  188,
  64,
  152,
  187,
  38,
  136,
  255,
  45,
  150,
  234,
  57,
  177,
  191,
  92,
  191,
  143,
  147,
  191,
  90,
  179,
  193,
  63,
  187,
  195,
  63,
  191,
  197,
  62,
  0,
  181,
  255,
  0,
  200,
  237,
  0,
  237,
  202,
  55,
  255,
  138,
  164,
  255,
  46,
  228,
  246,
  0,
  246,
  228,
  0,
  255,
  219,
  0,
  16,
  231,
  151,
  22,
  0,
  0,
  0,
  18,
  73,
  68,
  65,
  84,
  120,
  156,
  99,
  100,
  96,
  132,
  2,
  14,
  40,
  205,
  66,
  22,
  3,
  0,
  19,
  47,
  0,
  139,
  86,
  42,
  174,
  140,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;

exports[`decode bit-depth-16 1`] = `
Uint8Array [
  137,
  80,
  78,
  71,
  13,
  10,
  26,
  10,
  0,
  0,
  0,
  13,
  73,
  72,
  68,
  82,
  0,
  0,
  0,
  32,
  0,
  0,
  0,
  32,
  16,
  0,
  0,
  0,
  0,
  6,
  129,
  249,
  107,
  0,
  0,
  0,
  4,
  103,
  65,
  77,
  65,
  0,
  1,
  134,
  160,
  49,
  232,
  150,
  95,
  0,
  0,
  0,
  203,
  73,
  68,
  65,
  84,
  120,
  156,
  165,
  148,
  65,
  14,
  131,
  32,
  20,
  68,
  253,
  88,
  9,
  93,
  186,
  51,
  30,
  193,
  51,
  120,
  255,
  155,
  224,
  186,
  27,
  99,
  252,
  108,
  138,
  164,
  77,
  149,
  8,
  124,
  166,
  179,
  133,
  76,
  152,
  151,
  23,
  168,
  105,
  158,
  153,
  24,
  147,
  62,
  91,
  87,
  235,
  163,
  240,
  112,
  72,
  246,
  10,
  81,
  185,
  128,
  180,
  198,
  6,
  16,
  217,
  144,
  7,
  58,
  96,
  223,
  5,
  19,
  202,
  3,
  178,
  5,
  18,
  2,
  204,
  173,
  49,
  58,
  145,
  174,
  75,
  157,
  104,
  173,
  212,
  235,
  147,
  63,
  7,
  48,
  131,
  16,
  183,
  77,
  192,
  64,
  242,
  2,
  231,
  146,
  87,
  100,
  8,
  189,
  72,
  195,
  128,
  75,
  100,
  237,
  178,
  64,
  12,
  190,
  18,
  193,
  12,
  152,
  139,
  5,
  50,
  2,
  206,
  121,
  145,
  250,
  30,
  151,
  8,
  20,
  137,
  47,
  1,
  32,
  254,
  36,
  2,
  33,
  158,
  9,
  36,
  10,
  164,
  18,
  5,
  145,
  166,
  9,
  151,
  8,
  250,
  145,
  206,
  18,
  65,
  12,
  152,
  139,
  5,
  114,
  137,
  142,
  180,
  227,
  136,
  75,
  4,
  136,
  20,
  15,
  168,
  22,
  233,
  42,
  17,
  0,
  49,
  38,
  112,
  83,
  80,
  35,
  81,
  16,
  105,
  158,
  113,
  137,
  170,
  69,
  138,
  37,
  58,
  242,
  6,
  128,
  163,
  150,
  92,
  96,
  194,
  242,
  148,
  0,
  0,
  0,
  0,
  73,
  69,
  78,
  68,
  174,
  66,
  96,
  130,
]
`;
